# xcuitest-goblin

./: .flake8  README.md  pyproject.toml
tests/: test_basic.py  test_cli.py  test_config.py
xcuitest_goblin/: __init__.py
xcuitest_goblin/analyzers/: accessibility_analyzer.py  test_inventory_analyzer.py
xcuitest_goblin/reporters/: html_reporter.py
